Fixed bug #39775 ("Indirect modification ..." message is not shown) The fix breaks two SimpleXML tests those must be fixed