ext/spl/tests/iterator_035.phpt
@@ -14,4 +14,6 @@ $a[] = &$tmp;
 echo "Done\n";
 ?>
 --EXPECTF--	
+Notice: Indirect modification of overloaded element of ArrayIterator has no effect in %siterator_035.php on line 7
+
 Fatal error: Cannot assign by reference to overloaded object in %s on line %d
